--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Ενημέρωση για ψηφιακές υπηρεσίες ΥΝΑΝΠ / ΛΣ-ΕΛΑΚΤ</h1>
-                    <p class="mb-5">Σας γνωρίζουμε ότι λόγω τεχνικού θέματος δεν είναι διαθέσιμες οι ψηφιακές υπηρεσίες του Φορέα μας</p>
+                    <p class="mb-5">Σας γνωρίζουμε ότι λόγω τεχνικού θέματος δεν είναι διαθέσιμες οι ψηφιακές υπηρεσίες του Φορέα μας.</p>
                     
                 </div>
             </div>
