--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
         <title>Hellenic Coast Guard Status Page</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <script src="https://use.fontawesome.com/releases/v6.7.2/js/all.js" crossorigin="anonymous"></script>
+        
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/styles2.css" rel="stylesheet" />
@@ -31,7 +30,7 @@
         <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="https://x.com/hcoastguard"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark m-3" href="https://x.com/hcoastguard"><i class="fab fa-x-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.facebook.com/%CE%9B%CE%B9%CE%BC%CE%B5%CE%BD%CE%B9%CE%BA%CF%8C-%CE%A3%CF%8E%CE%BC%CE%B1-%CE%95%CE%BB%CE%BB%CE%B7%CE%BD%CE%B9%CE%BA%CE%AE-%CE%91%CE%BA%CF%84%CE%BF%CF%86%CF%85%CE%BB%CE%B1%CE%BA%CE%AE-130154521008021/"><i class="fab fa-facebook-f"></i></a>
             </div>
         </div>
